frontend/tests/cases/negative/simple/useFollowedByCase.gr
data Bool = True | False
bug : Int -> Int
bug x = let () = drop@ Int x in (if True then x else 7)